src/manifests/bocanary-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bocanary
  namespace: bocanary-workload
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bocanary
  strategy: {}
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: bocanary
    spec:
      imagePullSecrets:
      - name: dockerhub      
      containers:
      - name: bocanary
        image: moimhossain/IMAGE_NAME:IMAGE_VERSION
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
