src/manifests/bocanary-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bocanary
  namespace: bocanary-workload
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: bocanary.octo-lamp.nl
    http:
      paths:
      - backend:
          serviceName: bocanary
          servicePort: 80
        path: /(.*)
